--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "insuranceae.com-(policysnap-ae)",
+  "name": "insuranceae.com",
   "private": true,
   "version": "0.0.0",
   "type": "module",
